# apps.web.download-manager

./: .gbs.conf  AUTHORS  CMakeLists.txt  Download-manager.files  Download-manager.includes  INSTALL  NOTICE  build_mobile.sh  org.tizen.download-manager.efl  org.tizen.download-manager.manifest  org.tizen.download-manager.rule  project.config  tzmb_v3.0_arm-wayland.conf
edc/: download-manager-view.edc
oma-parser/: CMakeLists.txt  oma-parser-common.c  oma-parser-common.h  oma-parser-dd1.c  oma-parser-dd1.h  oma-parser-interface.c  oma-parser-interface.h
packaging/: org.tizen.download-manager.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl_NL.po  (+19 more)
po/hd/: CMakeLists.txt  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  gl.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mn_MN.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  sl.po  sr.po  sv.po  (+3 more)
po/wvga/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
res/: download-manager.edc  org.tizen.download-manager.xml
res/tables/wvga/: org.tizen.download-manager_ChangeableColorInfo.xml
src/: download-manager-dateTime.cpp  download-manager-downloadItem.cpp  download-manager-downloadRequest.cpp  download-manager-event.cpp  download-manager-history-db.cpp  download-manager-item.cpp  download-manager-items.cpp  download-manager-network.cpp  download-manager-notification.cpp  download-manager-util.cpp  download-manager-view.cpp  download-manager-viewItem.cpp  main.cpp
src/include/: download-manager-common.h  download-manager-dateTime.h  download-manager-debug.h  download-manager-downloadItem.h  download-manager-downloadRequest.h  download-manager-event.h  download-manager-history-db.h  download-manager-item.h  download-manager-items.h  download-manager-network.h  download-manager-notification.h  download-manager-util.h  download-manager-view.h  download-manager-viewItem.h
