
SET(PROJ_NAME "oma-parser")
SET(VERSION "0.0.1")

FIND_LIBRARY(LIB_EXPAT expat)

SET(OMA-PARSER-SRCS
	oma-parser-common.c
	oma-parser-dd1.c
	oma-parser-interface.c
)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")

INCLUDE(FindPkgConfig)
pkg_check_modules(op-pkgs REQUIRED
	dlog
)

FOREACH(flag ${op-pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${INC_FLAGS}${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -fPIC")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -Wall")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")

#SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--as-needed -Wl,--hash-style=both")

ADD_DEFINITIONS("-DDEBUG_USING_DLOG")

ADD_LIBRARY(${PROJ_NAME} ${OMA-PARSER-SRCS})
#ADD_LIBRARY(${PROJ_NAME} SHARED ${OMA-PARSER-SRCS})
TARGET_LINK_LIBRARIES(${PROJ_NAME} ${op-pkgs_LDFLAGS} ${LIB_EXPAT})
#SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES VERSION ${VERSION})

#INSTALL(TARGETS ${PROJ_NAME} DESTINATION lib COMPONENT RuntimeLibraries)


